syntax = "proto3";

package course;

option go_package = "github.com/nuhmanudheent/online-learning-platform/courses";

service CourseService {
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse);
  rpc GetCourse(GetCourseRequest) returns (GetCourseResponse);
  rpc ListCourses(ListCoursesRequest) returns (ListCoursesResponse);
}

message CreateCourseRequest {
  string title = 1;
  string description = 2;
}

message CreateCourseResponse {
  Course course = 1;
}

message GetCourseRequest {
  string id = 1;
}

message GetCourseResponse {
  Course course = 1;
}

message ListCoursesRequest {}

message ListCoursesResponse {
  repeated Course courses = 1;
}

message Course {
  string id = 1;
  string title = 2;
  string description = 3;
}
